browser/themes/shared/tabbrowser/tabs.css
/* ... */
/* Tabs in split-view-wrapper defaults */
#tabbrowser-tabs tab-split-view-wrapper {
  display: grid;
  grid-template-columns: 50% 50%;
  margin-inline: var(--space-small);
  padding: var(--space-xsmall);
  border-radius: var(--tab-border-radius);
  position: relative; /* prevents splitview wrappers from shifting during other drag events*/
  -moz-window-dragging: no-drag;

  &[hasactivetab] {
    background-color: var(--tab-hover-background-color);

    @media (forced-colors) {
      border: 1px solid SelectedItem;
      background: SelectedItemText;
    }
  }

  @media (prefers-reduced-motion: no-preference) {
    #tabbrowser-tabs[movingtab] &:not(:active) {
      transition: var(--tab-dragover-transition);
    }
  }

  &[multiselected][small-stack],
  &[multiselected][big-stack] {
    outline: 1px solid var(--tab-dragover-outline-color);
  }

  .tabbrowser-tab {
    padding-block: 0 !important;

    .tab-background {
      margin-inline: var(--space-xxsmall);
      margin-block: 0;
    }

    .tab-content {
      padding-inline: var(--space-medium);

      @media (forced-colors) {
        #tabbrowser-tabs tab-split-view-wrapper[hasactivetab] .tabbrowser-tab:not([selected]) & {
          color: SelectedItem;
        }
      }
    }

    /* For explicitly horizontally-oriented split-view-wrapped tabs only.
       We do want the specificity granted by :is (vs. :where) in this case */
    :is(#tabbrowser-tabs[orient="horizontal"], #tabbrowser-tabs[orient="vertical"][expanded]) tab-split-view-wrapper & {
      &:first-child {
        .tab-background {
          margin-inline-end: 0;
        }

        tab-split-view-wrapper:not([hasactivetab]) & {
          border-block-end: transparent;
        }
      }

      &:last-child {
        .tab-background {
          margin-inline-start: 0;
        }

        .tab-content {
          padding-inline-start: var(--space-medium);
        }
      }
    }
  }

  &:not([hasactivetab]) {
    outline: var(--tab-outline);
    outline-offset: var(--tab-outline-offset);

    &:hover {
      background-color: var(--tab-hover-background-color);
      outline-color: var(--tab-hover-outline-color);
    }

    .tabbrowser-tab {
      &:not([multiselected]) {
        .tab-background {
          outline-color: transparent;
        }

        &:hover .tab-background {
          background-color: transparent;
          outline-color: transparent;
        }
      }

      &:last-child {
        border-inline-start: 1px solid var(--toolbarbutton-icon-fill);
      }
    }
  }
}

/* Overrides for split-view-wrapped tabs in a vertical tabstrip */
#tabbrowser-tabs[orient="vertical"] tab-split-view-wrapper {
  border-radius: var(--tab-border-radius);
  gap: var(--space-xsmall);
  grid-template-columns: 49.5% 49.5%;

  @container vertical-tabs-container (max-width: 210px) {
    grid-template-columns: 1fr;

    &:not([hasactivetab]) .tabbrowser-tab {
      &:first-child {
        border-block-end: 1px solid var(--toolbarbutton-icon-fill);
        border-inline-end: transparent;
      }

      &:last-child {
        border-inline-start: transparent !important;
      }
    }
  }
}

/* Overrides for split-view-wrapped tabs in a collapsed vertical tabstrip */
#tabbrowser-tabs[orient="vertical"]:not([expanded]) tab-split-view-wrapper {
  /* Prevent the close button from being cutoff by the bookmarks toolbar / nav bar
  if split view is first in list if non-pinned vertical tabs */
  &:first-child {
    margin-block-start: var(--space-xsmall);
  }

  /* Allow close button to overflow the split view wrapper */
  .tabbrowser-tab {
    overflow: visible;

    .tab-background {
      margin-inline: 0;
      margin-block: 0;
    }

    .tab-content {
      padding-inline: unset;
      justify-content: center;
    }
  }

  .tab-close-button {
    top: -5px;
    inset-inline-start: -7px;
  }
}

/* Drag/drop of split-view-wrapped tabs */
#tabbrowser-tabs[orient="vertical"] tab-split-view-wrapper {
  &[small-stack] {
    box-shadow:
      0 5px 0 -3px var(--tab-selected-bgcolor),
      0 3px var(--tab-dragover-outline-color);
  }

  &[big-stack] {
    box-shadow:
      0 6px 0 -3px var(--tab-selected-bgcolor),
      0 4px var(--tab-dragover-outline-color),
      0 9px 0 -3px var(--tab-selected-bgcolor),
      0 7px var(--tab-dragover-outline-color);
  }
}

#tabbrowser-tabs[orient="horizontal"] tab-split-view-wrapper {
  &[small-stack] {
    box-shadow:
      5px 0 0 -3px var(--tab-selected-bgcolor),
      3px 0 0 1px var(--tab-dragover-outline-color);
  }

  &[big-stack] {
    box-shadow:
      5px 0 0 -3px var(--tab-selected-bgcolor),
      3px 0 0 1px var(--tab-dragover-outline-color),
      8px 0 0 -3px var(--tab-selected-bgcolor),
      6px 0 0 1px var(--tab-dragover-outline-color);
  }

  &:-moz-locale-dir(rtl) {
    &[small-stack] {
      box-shadow:
        -5px 0 0 -3px var(--tab-selected-bgcolor),
        -3px 0 0 1px var(--tab-dragover-outline-color);
    }

    &[big-stack] {
      box-shadow:
        -5px 0 0 -3px var(--tab-selected-bgcolor),
        -3px 0 0 1px var(--tab-dragover-outline-color),
        -8px 0 0 -3px var(--tab-selected-bgcolor),
        -6px 0 0 1px var(--tab-dragover-outline-color);
    }
  }
}
/* ... */

